--- a/packages/tailwind/package.json
+++ b/packages/tailwind/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/react-universal/tailwind.git",
+    "url": "https://github.com/react-universal/tailwind",
     "directory": "packages/tailwind"
   },
   "type": "module",
@@ -59,5 +59,5 @@
     "access": "public",
     "registry": "https://npm.pkg.github.com"
   },
-  "gitHead": "4351cc7a60998a74f45e6393ab2d2360df92679b"
+  "gitHead": "c00ff6d343a4607c0a3f38331144499b21c84d08"
 }
