--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-universal/core",
-  "version": "1.0.0",
+  "version": "0.0.10",
   "description": "Core package that contains common utils, primitives and SWC compatibility layer",
   "homepage": "https://github.com/react-universal/tailwind#readme",
   "bugs": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/react-universal/tailwind.git",
+    "url": "https://github.com/react-universal/tailwind",
     "directory": "packages/core"
   },
   "license": "MIT",
@@ -30,7 +30,7 @@
     }
   },
   "dependencies": {
-    "@react-universal/tailwind": "*",
+    "@react-universal/tailwind": "^0.0.10",
     "css-to-react-native": "^3.1.0",
     "css-to-react-native-transform": "^2.0.0",
     "immer": "^9.0.19",
@@ -67,5 +67,6 @@
     "access": "public",
     "registry": "https://npm.pkg.github.com"
   },
+  "gitHead": "f8e9ced1704e8896f73b27e2843b54b7488b294e",
   "react-native": "./src/index.ts"
 }
