--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-universal/primitives",
-  "version": "1.0.0",
+  "version": "0.0.10",
   "description": "",
   "homepage": "https://github.com/react-universal/tailwind#readme",
   "bugs": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/react-universal/tailwind.git",
+    "url": "https://github.com/react-universal/tailwind",
     "directory": "packages/primitives"
   },
   "license": "MIT",
@@ -43,8 +43,8 @@
   },
   "devDependencies": {
     "@expo/html-elements": "^0.3.1",
-    "@react-universal/core": "*",
-    "@react-universal/styled": "*",
+    "@react-universal/core": "^0.0.10",
+    "@react-universal/styled": "^0.0.10",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "@types/react-is": "^17.0.3",
@@ -67,5 +67,6 @@
     "access": "public",
     "registry": "https://npm.pkg.github.com"
   },
+  "gitHead": "f8e9ced1704e8896f73b27e2843b54b7488b294e",
   "react-native": "./src/index.ts"
 }
