--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-universal/styled",
-  "version": "1.0.0",
+  "version": "0.0.10",
   "description": "Styled components",
   "homepage": "https://github.com/react-universal/tailwind#readme",
   "bugs": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/react-universal/tailwind.git",
+    "url": "https://github.com/react-universal/tailwind",
     "directory": "packages/styled"
   },
   "license": "MIT",
@@ -31,7 +31,7 @@
     }
   },
   "dependencies": {
-    "@react-universal/core": "*"
+    "@react-universal/core": "^0.0.10"
   },
   "devDependencies": {
     "@types/react": "18.0.24",
@@ -51,5 +51,6 @@
     "access": "public",
     "registry": "https://npm.pkg.github.com"
   },
+  "gitHead": "f8e9ced1704e8896f73b27e2843b54b7488b294e",
   "react-native": "./src/index.ts"
 }
