--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,10 +25,10 @@ jobs:
       - name: Creating .npmrc
         run: |
           cat << EOF > "$HOME/.npmrc"
-            @react-universal:registry=https://npm.pkg.github.com:_authToken=$NPM_TOKEN
+            @react-universal:registry=//npm.pkg.github.com:_authToken=$NPM_TOKEN
           EOF
         env:
-          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.GH_TOKEN_NPM }}
 
       - name: Create Release Pull Request or Publish to npm
         uses: changesets/action@v1
@@ -36,5 +36,5 @@ jobs:
           publish: yarn release
           version: yarn version-packages
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN_NPM }}
+          NPM_TOKEN: ${{ secrets.GH_TOKEN_NPM }}
