--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,5 +36,5 @@ jobs:
           publish: yarn release
           version: yarn version-packages
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN_NPM }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.GH_TOKEN_NPM }}
