--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,8 @@ jobs:
       - name: Creating .npmrc
         run: |
           cat << EOF > "$HOME/.npmrc"
-            @react-universal:registry=//npm.pkg.github.com:_authToken=$NPM_TOKEN
+            @react-universal:registry=https://npm.pkg.github.com
+            //npm.pkg.github.com:_authToken=$NPM_TOKEN
           EOF
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
