--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,7 +6,11 @@
   "bugs": {
     "url": "https://github.com/react-universal/tailwind/issues"
   },
-  "repository": "https://github.com/react-universal/tailwind/tree/main/packages/core",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/react-universal/tailwind",
+    "directory": "packages/core"
+  },
   "license": "MIT",
   "author": "Cristhian Gutierrez",
   "sideEffects": false,
