--- a/.github/actions/ci-setup/action.yml
+++ b/.github/actions/ci-setup/action.yml
@@ -8,6 +8,8 @@ runs:
       with:
         node-version: 16.x
         cache: yarn
+        always-auth: true
+        token: ${{ secrets.NPM_TOKEN }}
 
     - name: Install Dependencies
       run: yarn --immutable
