--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@react-universal/styled",
+  "name": "@react-universal/styledasdasdasdsd",
   "version": "1.0.3",
   "description": "Styled components",
   "homepage": "https://github.com/react-universal/tailwind#readme",
