--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,6 +30,7 @@
     }
   },
   "dependencies": {
+    "@legendapp/state": "^0.23.4",
     "@react-universal/native-tailwind": "^1.0.3",
     "css-to-react-native": "^3.1.0",
     "css-to-react-native-transform": "^2.0.0",
