--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -52,6 +52,7 @@
     "@types/use-sync-external-store": "^0.0.3",
     "@vitest/ui": "^0.28.3",
     "postcss": "^8.4.21",
+    "react-native-reanimated": "~2.12.0",
     "tailwindcss": "^3.2.4",
     "tslib": "^2.3.0",
     "vite": "^4.1.1",
@@ -59,6 +60,7 @@
   },
   "peerDependencies": {
     "postcss": ">= 8.0.0",
+    "react-native-reanimated": ">=2.12.0",
     "tailwindcss": ">= 3.0.0"
   },
   "gitHead": "a5c05d5ee9bc016aa01fc3a7cc03bddd46d1e634",
