--- a/examples/next-app/package.json
+++ b/examples/next-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.0.6",
+    "@react-universal/core": "^1.0.3",
     "@react-universal/primitives": "^1.0.3",
     "autoprefixer": "10.4.13",
     "critters": "^0.0.16",
