adding expo 48 and local state manager

--- a/examples/expo-app/app.json
+++ b/examples/expo-app/app.json
@@ -3,6 +3,7 @@
     "name": "expo-app",
     "slug": "expo-app",
     "version": "1.0.0",
+    "jsEngine": "jsc",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "automatic",
