--- a/examples/expo-app/package.json
+++ b/examples/expo-app/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "android": "expo start --android",
-    "ios": "npx expo start --ios -c",
+    "ios": "expo start --ios -c",
     "start": "expo start",
     "web": "expo start --web"
   },
@@ -14,23 +14,21 @@
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
     "@react-universal/primitives": "^1.0.3",
-    "expo": "~47.0.13",
-    "expo-constants": "~14.0.2",
-    "expo-status-bar": "~1.4.2",
+    "expo": "^48.0.0",
+    "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.70.5",
+    "react-native": "0.71.3",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-reanimated": "~2.12.0",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@expo/metro-config": "^0.5.2",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9",
+    "@types/react": "~18.0.27",
+    "@types/react-dom": "~18.0.10",
     "@types/react-native": "0.70.7",
     "babel-plugin-module-resolver": "^5.0.0",
     "postcss": "^8.4.21",
