--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     }
   },
   "resolutions": {
-    "@types/react": "18.0.24",
+    "@types/react": "18.0.27",
     "react": "18.2.0",
     "react-devtools-core": "~4.25.0",
     "react-dom": "18.2.0",
-    "react-native-web": "0.18.10"
+    "react-native-web": "0.18.10",
+    "uuid": "^3.4.0"
   },
   "dependencies": {
     "@changesets/cli": "^2.26.0"
