--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -38,37 +38,28 @@
     }
   },
   "dependencies": {
-    "@legendapp/state": "^0.23.4",
     "@react-universal/native-tailwind": "^1.0.3",
     "css-to-react-native": "^3.1.0",
     "css-to-react-native-transform": "^2.0.0",
-    "immer": "^9.0.19",
-    "postcss-css-variables": "^0.18.0",
-    "postcss-js": "^4.0.0",
-    "postcss-rem-to-pixel": "^4.1.2",
     "use-sync-external-store": "^1.2.0"
   },
   "devDependencies": {
     "@simbathesailor/use-what-changed": "^2.0.0",
     "@types/css-to-react-native": "^3.0.0",
-    "@types/css-tree": "^2.0.1",
-    "@types/postcss-css-variables": "^0.18.0",
-    "@types/postcss-js": "^4.0.0",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9",
+    "@types/react": "~18.0.27",
+    "@types/react-dom": "~18.0.10",
     "@types/react-native": "0.70.7",
     "@types/use-sync-external-store": "^0.0.3",
     "@vitest/ui": "^0.28.3",
-    "postcss": "^8.4.21",
-    "react-native-reanimated": "~2.12.0",
-    "tailwindcss": "^3.2.4",
     "tslib": "^2.3.0",
     "vite": "^4.1.1",
     "vitest": "^0.28.3"
   },
   "peerDependencies": {
     "postcss": ">= 8.0.0",
+    "react-native-gesture-handler": ">= 2.9.0",
     "react-native-reanimated": ">=2.12.0",
+    "react-native-web": ">= 0.18.10",
     "tailwindcss": ">= 3.0.0"
   },
   "gitHead": "a5c05d5ee9bc016aa01fc3a7cc03bddd46d1e634",
