--- a/packages/native-tailwind/package.json
+++ b/packages/native-tailwind/package.json
@@ -43,16 +43,24 @@
   "dependencies": {
     "postcss": "8.4.21",
     "postcss-color-rgb": "^2.0.0",
-    "postcss-css-variables": "0.18.0"
+    "postcss-css-variables": "^0.18.0",
+    "postcss-js": "^4.0.0",
+    "postcss-rem-to-pixel": "^4.1.2"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
     "@types/postcss-css-variables": "0.18.0",
-    "@types/react": "^18.0.27",
+    "@types/postcss-js": "^4.0.0",
+    "@types/react": "~18.0.27",
+    "@types/react-dom": "~18.0.10",
     "@types/tailwindcss": "3.1.0",
     "tailwindcss": "3.2.4",
     "vite": "^4.1.1",
     "vitest": "^0.28.3"
+  },
+  "peerDependencies": {
+    "postcss": ">= 8.0.0",
+    "tailwindcss": ">= 3.0.0"
   },
   "engines": {
     "node": ">=16.0.0"
