--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -39,27 +39,19 @@
   "dependencies": {
     "@expo/html-elements": "^0.3.1",
     "@react-universal/core": "^1.0.3",
-    "clsx": "^1.2.1",
-    "react-is": "18.2.0"
+    "clsx": "^1.2.1"
   },
   "devDependencies": {
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9",
-    "@types/react-is": "^17.0.3",
+    "@types/react": "~18.0.27",
+    "@types/react-dom": "~18.0.10",
     "@types/react-native": "0.70.7",
-    "next": "13.1.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.70.5",
-    "react-native-reanimated": "~2.12.0",
-    "react-native-svg": "13.4.0",
-    "react-native-svg-transformer": "1.0.0",
     "tailwindcss": "^3.2.4",
     "tslib": "^2.3.0",
     "vite": "^4.1.1"
   },
   "peerDependencies": {
-    "next": ">= 13.0.0"
+    "next": ">= 13.0.0",
+    "react-native": ">= 0.69.0"
   },
   "gitHead": "a5c05d5ee9bc016aa01fc3a7cc03bddd46d1e634",
   "react-native": "./src/index.ts"
