--- a/packages/tailwind-ui/package.json
+++ b/packages/tailwind-ui/package.json
@@ -41,17 +41,9 @@
     "class-variance-authority": "0.4.0"
   },
   "devDependencies": {
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9",
+    "@types/react": "~18.0.27",
+    "@types/react-dom": "~18.0.10",
     "@types/react-native": "0.70.7",
-    "next": "13.1.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.70.5",
-    "react-native-reanimated": "~2.12.0",
-    "react-native-svg": "13.4.0",
-    "react-native-svg-transformer": "1.0.0",
-    "tailwindcss": "^3.2.4",
     "tslib": "^2.3.0",
     "vite": "^4.1.1"
   },
