--- a/examples/next-app/package.json
+++ b/examples/next-app/package.json
@@ -16,6 +16,8 @@
     "critters": "^0.0.16",
     "next": "13.1.4",
     "postcss": "^8.4.21",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native-web": "~0.18.10",
     "tailwindcss": "^3.2.4"
   },
