--- a/packages/native-tailwind/package.json
+++ b/packages/native-tailwind/package.json
@@ -31,8 +31,8 @@
   "module": "./build/index.cjs.js",
   "types": "./index.d.ts",
   "scripts": {
-    "build": "yarn vite build",
-    "prepare": "yarn build",
+    "build": "pnpm vite build",
+    "prepare": "pnpm build",
     "test:ui": "vitest --ui"
   },
   "config": {
