--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -26,9 +26,9 @@
   "module": "./build/index.es.js",
   "types": "./src/index.ts",
   "scripts": {
-    "build": "yarn vite build",
-    "dev": "yarn vite build -w --force",
-    "prepare": "yarn build",
+    "build": "pnpm vite build",
+    "dev": "pnpm vite build -w --force",
+    "prepare": "pnpm build",
     "test": "expo-module test"
   },
   "config": {
@@ -38,20 +38,23 @@
   },
   "dependencies": {
     "@expo/html-elements": "^0.3.1",
-    "@react-universal/core": "^1.0.3",
-    "clsx": "^1.2.1"
+    "@react-universal/core": "^1.0.3"
   },
   "devDependencies": {
     "@types/react": "~18.0.27",
     "@types/react-dom": "~18.0.10",
     "@types/react-native": "0.70.7",
+    "postcss": "8.4.21",
+    "postcss-js": "^4.0.0",
     "tailwindcss": "^3.2.4",
     "tslib": "^2.3.0",
     "vite": "^4.1.1"
   },
   "peerDependencies": {
     "next": ">= 13.0.0",
-    "react-native": ">= 0.69.0"
+    "postcss": ">= 8.4",
+    "react-native": ">= 0.69.0",
+    "tailwindcss": "^3.2.4"
   },
   "gitHead": "a5c05d5ee9bc016aa01fc3a7cc03bddd46d1e634",
   "react-native": "./src/index.ts"
