--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.0.6",
-    "@react-universal/primitives": "^1.0.3",
+    "@react-universal/primitives": "workspace:*",
     "autoprefixer": "10.4.13",
     "critters": "^0.0.16",
     "next": "13.1.4",
