--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -38,7 +38,7 @@
     }
   },
   "dependencies": {
-    "@react-universal/native-tailwind": "^1.0.3",
+    "@react-universal/native-tailwind": "workspace:*",
     "clsx": "^1.2.1",
     "css-to-react-native": "^3.1.0",
     "css-to-react-native-transform": "^2.0.0",
