--- a/package.json
+++ b/package.json
@@ -70,5 +70,6 @@
     "vite": "^4.1.1",
     "vitest": "^0.28.3"
   },
-  "npmClient": "pnpm"
+  "npmClient": "pnpm",
+  "packageManager": "yarn@3.4.1"
 }
