tailwind ui package

--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
   "workspaces": [
     "packages/*",
     "examples/*",
-    "apps/*"
+    "apps/*",
+    "e2e/*"
   ],
   "scripts": {
     "build:libs": "turbo run build --filter=\"@react-universal/**\"",
     "commit": "cz",
     "dev": "turbo run dev --filter=\"@react-universal/**\" --parallel",
-    "expo:android": "pnpm workspace expo-app android",
-    "expo:ios": "pnpm workspace expo-app ios",
-    "expo:start": "pnpm workspace expo-app start",
+    "docs:dev": "yarn workspace docs-page dev",
+    "expo:android": "yarn workspace expo-app android",
+    "expo:ios": "yarn workspace expo-app ios",
+    "expo:start": "yarn workspace expo-app start",
     "release": "turbo run build --filter=\"@react-universal/**\" && changeset publish",
-    "version-packages": "changeset version && pnpm --mode=\"update-lockfile\"",
+    "test:e2e": "turbo run e2e",
+    "version-packages": "changeset version && yarn --mode=\"update-lockfile\"",
     "web": "turbo run dev --filter next-app"
   },
   "config": {
@@ -70,6 +73,5 @@
     "vite": "^4.1.1",
     "vitest": "^0.28.3"
   },
-  "npmClient": "pnpm",
   "packageManager": "yarn@3.4.1"
 }
