--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -10,16 +10,19 @@
   },
   "dependencies": {
     "@next/font": "13.0.6",
-    "@react-universal/primitives": "^1.0.3",
+    "@react-universal/primitives": "workspace:*",
+    "@react-universal/tailwind-ui": "workspace:*",
     "autoprefixer": "10.4.13",
     "critters": "^0.0.16",
     "next": "13.1.4",
     "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-syntax-highlighter": "15.5.0",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
+    "@types/react-syntax-highlighter": "^15.5.6",
     "next-compose-plugins": "^2.2.1"
   }
 }
