--- a/examples/next-app/package.json
+++ b/examples/next-app/package.json
@@ -12,6 +12,7 @@
     "@next/font": "13.0.6",
     "@react-universal/core": "^1.0.3",
     "@react-universal/primitives": "^1.0.3",
+    "@react-universal/tailwind-ui": "workspace:*",
     "autoprefixer": "10.4.13",
     "critters": "^0.0.16",
     "next": "13.1.4",
