--- a/packages/tailwind-ui/package.json
+++ b/packages/tailwind-ui/package.json
@@ -28,6 +28,7 @@
   "scripts": {
     "build": "yarn vite build",
     "dev": "yarn vite build -w --force",
+    "e2e": "cypress run --config video=false --component",
     "prepare": "yarn build",
     "test": "expo-module test"
   },
@@ -37,18 +38,25 @@
     }
   },
   "dependencies": {
-    "@react-universal/core": "^1.0.3",
-    "class-variance-authority": "0.4.0"
+    "@headlessui/react": "1.7.12",
+    "@heroicons/react": "^2.0.16",
+    "@react-universal/core": "workspace:*",
+    "@react-universal/primitives": "workspace:*",
+    "class-variance-authority": "0.4.0",
+    "clsx": "^1.2.1"
   },
   "devDependencies": {
     "@types/react": "~18.0.27",
     "@types/react-dom": "~18.0.10",
     "@types/react-native": "0.70.7",
+    "cypress": "^12.7.0",
+    "react-native-svg": ">= 12",
     "tslib": "^2.3.0",
     "vite": "^4.1.1"
   },
   "peerDependencies": {
-    "next": ">= 13.0.0"
+    "next": ">= 13.0.0",
+    "react-native-svg": ">= 12"
   },
   "gitHead": "a5c05d5ee9bc016aa01fc3a7cc03bddd46d1e634",
   "react-native": "./src/index.ts"
