--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -43,6 +43,8 @@
     "clsx": "^1.2.1",
     "css-to-react-native": "^3.1.0",
     "css-to-react-native-transform": "^2.0.0",
+    "immer": "^9.0.19",
+    "react-is": "^18.2.0",
     "use-sync-external-store": "^1.2.0"
   },
   "devDependencies": {
@@ -50,6 +52,7 @@
     "@types/css-to-react-native": "^3.0.0",
     "@types/react": "~18.0.27",
     "@types/react-dom": "~18.0.10",
+    "@types/react-is": "^17.0.3",
     "@types/react-native": "0.70.7",
     "@types/use-sync-external-store": "^0.0.3",
     "@vitest/ui": "^0.28.3",
