--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -48,6 +48,7 @@
     "use-sync-external-store": "^1.2.0"
   },
   "devDependencies": {
+    "@redux-devtools/extension": "^3.2.5",
     "@simbathesailor/use-what-changed": "^2.0.0",
     "@types/css-to-react-native": "^3.0.0",
     "@types/react": "~18.0.27",
@@ -57,6 +58,7 @@
     "@types/use-sync-external-store": "^0.0.3",
     "@vitest/ui": "^0.28.3",
     "react": "18.2.0",
+    "tailwindest": "^1.0.4",
     "tslib": "^2.3.0",
     "vite": "^4.1.1",
     "vitest": "^0.28.3"
