--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -39,6 +39,7 @@
     }
   },
   "dependencies": {
+    "@paralleldrive/cuid2": "^2.2.0",
     "@react-universal/native-tailwind": "^1.0.3",
     "clsx": "^1.2.1",
     "css-to-react-native": "^3.1.0",
