--- a/examples/expo-app/tsconfig.json
+++ b/examples/expo-app/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "allowJs": true,
+    "checkJs": false,
+    "esModuleInterop": true
   }
 }
