--- a/examples/expo-app/package.json
+++ b/examples/expo-app/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/drawer": "^6.6.0",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
+    "@react-universal/core": "^1.1.0",
     "@react-universal/primitives": "^1.1.0",
     "expo": "^48.0.0",
     "expo-status-bar": "~1.4.4",
