--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@vitejs/plugin-react-swc": "^3.1.0-beta.2",
     "@vue/compiler-sfc": "^3.2.47",
     "commitizen": "^4.3.0",
+    "cypress": "^12.7.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
