--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,7 +31,7 @@
   "types": "./src/index.ts",
   "scripts": {
     "build": "yarn vite build && yarn vite build -c tailwind.vite.config.ts",
-    "dev": "yarn vite build -w",
+    "dev": "yarn vite build -c tailwind.vite.config.ts && yarn vite build -w",
     "prepare": "yarn build",
     "test": "vitest",
     "test:run": "vitest run",
@@ -48,6 +48,7 @@
     "clsx": "^1.2.1",
     "css-to-react-native": "^3.1.0",
     "css-to-react-native-transform": "^2.0.0",
+    "daisyui": "2.51.3",
     "immer": "^9.0.19",
     "react-is": "^18.2.0",
     "use-sync-external-store": "^1.2.0"
