feat(ci): publish config

--- a/lerna.json
+++ b/lerna.json
@@ -9,6 +9,7 @@
   "scope": "@react-universal",
   "registry": "https://npm.pkg.github.com",
   "createRelease": "github",
+  "loglevel": "verbose",
   "conventionalCommits": true,
   "verbose": true,
   "signGitCommit": true,
