--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "commitizen": "^4.3.0",
     "cypress": "^12.7.0",
     "cz-conventional-changelog": "^3.3.0",
+    "cz-lerna-changelog": "^2.0.3",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-import": "2.26.0",
