--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -29,7 +29,7 @@
     "build": "yarn vite build",
     "dev": "yarn vite build -w --force",
     "prepare": "yarn build",
-    "test": "expo-module test"
+    "test": "yarn vite test"
   },
   "config": {
     "commitizen": {
@@ -44,9 +44,6 @@
     "@types/react": "~18.0.27",
     "@types/react-dom": "~18.0.10",
     "@types/react-native": "0.70.7",
-    "postcss": "8.4.21",
-    "postcss-js": "^4.0.0",
-    "tailwindcss": "^3.2.4",
     "tslib": "^2.3.0",
     "vite": "^4.1.1"
   },
