--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "expo:android": "yarn workspace expo-app android",
     "expo:ios": "yarn workspace expo-app ios",
     "expo:start": "yarn workspace expo-app start",
-    "release": "turbo run build --filter=\"@react-universal/**\" && yarn lerna publish",
+    "release": "turbo run build --filter=\"@react-universal/**\" && yarn lerna publish --yes --force-publish",
     "test:e2e": "turbo run e2e",
     "version-packages": "changeset version && yarn --mode=\"update-lockfile\"",
     "web": "turbo run dev --filter next-app"
