--- a/packages/react-tailwindcss/package.json
+++ b/packages/react-tailwindcss/package.json
@@ -17,6 +17,7 @@
     "url": "https://github.com/react-universal/tailwind",
     "directory": "packages/react-tailwindcss"
   },
+  "type": "module",
   "exports": {
     ".": {
       "import": "./build/index.js",
@@ -37,7 +38,7 @@
     "build"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "vite build",
     "dev": "tsc -w",
     "prepare": "yarn build"
   },
@@ -50,7 +51,9 @@
     "@types/react": "~18.0.27",
     "@types/react-dom": "~18.0.10",
     "@types/tailwindcss": "3.1.0",
-    "tailwindcss": "3.2.4"
+    "tailwindcss": "3.2.4",
+    "tslib": "^2.3.0",
+    "vite": "^4.1.1"
   },
   "peerDependencies": {
     "postcss": ">= 8.0.0",
