moving to npm registry

--- a/lerna.json
+++ b/lerna.json
@@ -6,8 +6,7 @@
   "changelog": true,
   "allowBranch": ["main", "next"],
   "npmClient": "yarn",
-  "scope": "@react-universal",
-  "registry": "https://npm.pkg.github.com",
+  "scope": "@universal-labs",
   "createRelease": "github",
   "loglevel": "verbose",
   "conventionalCommits": true,
