--- a/examples/expo-app/package.json
+++ b/examples/expo-app/package.json
@@ -13,8 +13,8 @@
     "@react-navigation/drawer": "^6.6.0",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
-    "@react-universal/core": "^1.3.0",
-    "@react-universal/primitives": "^1.3.0",
+    "@universal-labs/core": "workspace:*",
+    "@universal-labs/primitives": "workspace:*",
     "expo": "^48.0.0",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
