--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@react-universal/core",
+  "name": "@universal-labs/core",
   "version": "1.3.0",
   "description": "Core package that contains common utils, primitives and SWC compatibility layer",
   "homepage": "https://github.com/react-universal/tailwind#readme",
@@ -39,7 +39,7 @@
   },
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.0",
-    "@react-universal/native-tailwind": "^1.3.0",
+    "@universal-labs/native-tailwind": "^1.3.0",
     "clsx": "^1.2.1",
     "css-to-react-native": "^3.1.0",
     "immer": "^9.0.19",
