--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@react-universal/primitives",
+  "name": "@universal-labs/primitives",
   "version": "1.3.0",
   "description": "",
   "homepage": "https://github.com/react-universal/tailwind#readme",
@@ -33,7 +33,7 @@
   },
   "dependencies": {
     "@expo/html-elements": "^0.3.1",
-    "@react-universal/core": "^1.3.0"
+    "@universal-labs/core": "workspace:*"
   },
   "devDependencies": {
     "@types/react": "~18.0.27",
