--- a/packages/tailwind-ui/package.json
+++ b/packages/tailwind-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@react-universal/tailwind-ui",
+  "name": "@universal-labs/tailwind-ui",
   "version": "1.3.0",
   "description": "",
   "homepage": "https://github.com/react-universal/tailwind#readme",
@@ -38,9 +38,9 @@
     "@heroicons/react": "^2.0.16",
     "@radix-ui/react-dialog": "^1.0.2",
     "@react-native-picker/picker": "^2.4.8",
-    "@react-universal/core": "workspace:*",
-    "@react-universal/primitives": "workspace:*",
     "@tanstack/react-table": "^8.7.9",
+    "@universal-labs/core": "workspace:*",
+    "@universal-labs/primitives": "workspace:*",
     "class-variance-authority": "0.4.0",
     "clsx": "^1.2.1"
   },
